// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`steppedListCard > should hide the toggle button 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 1.5rem;
}

.emotion-2 {
  display: grid;
  grid-template-columns: 9fr 1fr;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.emotion-5 {
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
  padding: 1.5rem;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  padding: 0;
}

.emotion-5[data-is-active='true'] {
  border: 1px solid #8c40ef;
}

.emotion-5[data-disabled='true'] {
  border: 1px solid #e9eaeb;
}

.emotion-7 {
  display: grid;
  grid-template-columns: 1fr 3fr;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 2rem;
  padding: 1.5rem;
  border-right: solid #d9dadd 1px;
}

.emotion-11 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 2rem;
  height: 2rem;
  font-size: 1rem;
  color: #ffffff;
  background: #8c40ef;
  border: 1px solid #8c40ef;
}

.emotion-15 {
  cursor: pointer;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
}

.emotion-15:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.emotion-15:active {
  text-decoration-thickness: 2px;
}

.emotion-19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 2rem;
  height: 2rem;
  font-size: 1rem;
  color: #3f4250;
  background: #ffffff;
  border: 1px solid #d9dadd;
}

.emotion-23 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-width: 0;
  padding: 1.5rem;
  padding-top: 2rem;
}

.emotion-25 {
  margin-bottom: 1.5rem;
}

.emotion-27 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: right;
  -ms-flex-pack: right;
  -webkit-justify-content: right;
  justify-content: right;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <div
        class="emotion-2 emotion-3"
      >
        <h1>
          Header
        </h1>
      </div>
      <div
        class="emotion-4 emotion-5 emotion-6"
        data-disabled="false"
        data-is-active="false"
      >
        <div
          class="emotion-7 emotion-3"
        >
          <div
            class="emotion-9 emotion-10"
          >
            <ul
              class="uv_1g1au380"
            >
              <li
                class="emotion-11 emotion-12 uv_1g1au381 uv_1g1au383"
              >
                <div
                  class="emotion-13 emotion-14"
                >
                  1
                </div>
                <div
                  class="uv_1g1au384 uv_1g1au386"
                >
                  <h3
                    class="emotion-15 emotion-16 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owi uv_m4c9owq uv_m4c9ow1b uv_m4c9ow3c"
                  >
                    step1
                  </h3>
                </div>
              </li>
              <li
                class="emotion-11 emotion-12 uv_1g1au381 uv_1g1au383"
              >
                <div
                  class="emotion-19 emotion-14"
                >
                  2
                </div>
                <div
                  class="uv_1g1au384 uv_1g1au386"
                >
                  <h3
                    class="emotion-15 emotion-16 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow3c"
                  >
                    step2
                  </h3>
                </div>
              </li>
            </ul>
          </div>
          <div
            class="emotion-23 emotion-24"
          >
            <div
              class="emotion-25 emotion-26"
            >
              <h3
                class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owi uv_m4c9ow16 uv_m4c9ow1b uv_m4c9ow3c"
              >
                First step
              </h3>
            </div>
            Description
            <div
              class="emotion-27 emotion-28"
            >
              <img
                alt="blockStorage"
                src="https://assets.scaleway.com/illustrations/products/blockStorage/block-storage-wire.svg"
                width="200"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`steppedListCard > should work with custom hide action 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 1.5rem;
}

.emotion-2 {
  display: grid;
  grid-template-columns: 9fr 1fr;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.emotion-5 {
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
  padding: 1.5rem;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  padding: 0;
}

.emotion-5[data-is-active='true'] {
  border: 1px solid #8c40ef;
}

.emotion-5[data-disabled='true'] {
  border: 1px solid #e9eaeb;
}

.emotion-7 {
  display: grid;
  grid-template-columns: 1fr 3fr;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 2rem;
  padding: 1.5rem;
  border-right: solid #d9dadd 1px;
}

.emotion-11 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 2rem;
  height: 2rem;
  font-size: 1rem;
  color: #ffffff;
  background: #8c40ef;
  border: 1px solid #8c40ef;
}

.emotion-15 {
  cursor: pointer;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
}

.emotion-15:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.emotion-15:active {
  text-decoration-thickness: 2px;
}

.emotion-19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 2rem;
  height: 2rem;
  font-size: 1rem;
  color: #3f4250;
  background: #ffffff;
  border: 1px solid #d9dadd;
}

.emotion-23 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-width: 0;
  padding: 1.5rem;
  padding-top: 2rem;
}

.emotion-25 {
  margin-bottom: 1.5rem;
}

.emotion-27 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: right;
  -ms-flex-pack: right;
  -webkit-justify-content: right;
  justify-content: right;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <div
        class="emotion-2 emotion-3"
      >
        <h3
          class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owi uv_m4c9ow11 uv_m4c9ow1b uv_m4c9ow3c"
        >
          Header
        </h3>
        <button
          class="uv_e1wcoe0 uv_e1wcoe3 uv_e1wcoe6 uv_e1wcoek uv_e1wcoei uv_e1wcoed uv_e1wcoe19"
          type="button"
        >
          Hide
        </button>
      </div>
      <div
        class="emotion-4 emotion-5 emotion-6"
        data-disabled="false"
        data-is-active="false"
      >
        <div
          class="emotion-7 emotion-3"
        >
          <div
            class="emotion-9 emotion-10"
          >
            <ul
              class="uv_1g1au380"
            >
              <li
                class="emotion-11 emotion-12 uv_1g1au381 uv_1g1au383"
              >
                <div
                  class="emotion-13 emotion-14"
                >
                  1
                </div>
                <div
                  class="uv_1g1au384 uv_1g1au386"
                >
                  <h3
                    class="emotion-15 emotion-16 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owi uv_m4c9owq uv_m4c9ow1b uv_m4c9ow3c"
                  >
                    step1
                  </h3>
                </div>
              </li>
              <li
                class="emotion-11 emotion-12 uv_1g1au381 uv_1g1au383"
              >
                <div
                  class="emotion-19 emotion-14"
                >
                  2
                </div>
                <div
                  class="uv_1g1au384 uv_1g1au386"
                >
                  <h3
                    class="emotion-15 emotion-16 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow3c"
                  >
                    step2
                  </h3>
                </div>
              </li>
            </ul>
          </div>
          <div
            class="emotion-23 emotion-24"
          >
            <div
              class="emotion-25 emotion-26"
            >
              <h1>
                First step
              </h1>
            </div>
            Description
            <div
              class="emotion-27 emotion-28"
            >
              <img
                alt="blockStorage"
                src="https://assets.scaleway.com/illustrations/products/blockStorage/block-storage-wire.svg"
                width="200"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`steppedListCard > should work with default props 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 1.5rem;
}

.emotion-2 {
  display: grid;
  grid-template-columns: 9fr 1fr;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.emotion-5 {
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
  padding: 1.5rem;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  padding: 0;
}

.emotion-5[data-is-active='true'] {
  border: 1px solid #8c40ef;
}

.emotion-5[data-disabled='true'] {
  border: 1px solid #e9eaeb;
}

.emotion-7 {
  display: grid;
  grid-template-columns: 1fr 3fr;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 2rem;
  padding: 1.5rem;
  border-right: solid #d9dadd 1px;
}

.emotion-11 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 2rem;
  height: 2rem;
  font-size: 1rem;
  color: #ffffff;
  background: #8c40ef;
  border: 1px solid #8c40ef;
}

.emotion-15 {
  cursor: pointer;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
}

.emotion-15:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.emotion-15:active {
  text-decoration-thickness: 2px;
}

.emotion-19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 2rem;
  height: 2rem;
  font-size: 1rem;
  color: #3f4250;
  background: #ffffff;
  border: 1px solid #d9dadd;
}

.emotion-23 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-width: 0;
  padding: 1.5rem;
  padding-top: 2rem;
}

.emotion-25 {
  margin-bottom: 1.5rem;
}

.emotion-27 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: right;
  -ms-flex-pack: right;
  -webkit-justify-content: right;
  justify-content: right;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <div
        class="emotion-2 emotion-3"
      >
        <h1>
          Header
        </h1>
        <div
          aria-controls="«r0»"
          aria-describedby="«r0»"
          class="uv_w40vpo9"
          tabindex="0"
        >
          <button
            class="uv_e1wcoe0 uv_e1wcoe3 uv_e1wcoe6 uv_e1wcoek uv_e1wcoei uv_e1wcoed uv_e1wcoe19"
            type="button"
          >
            hide button
          </button>
        </div>
      </div>
      <div
        class="emotion-4 emotion-5 emotion-6"
        data-disabled="false"
        data-is-active="false"
      >
        <div
          class="emotion-7 emotion-3"
        >
          <div
            class="emotion-9 emotion-10"
          >
            <ul
              class="uv_1g1au380"
            >
              <li
                class="emotion-11 emotion-12 uv_1g1au381 uv_1g1au383"
              >
                <div
                  class="emotion-13 emotion-14"
                >
                  1
                </div>
                <div
                  class="uv_1g1au384 uv_1g1au386"
                >
                  <h3
                    class="emotion-15 emotion-16 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owi uv_m4c9owq uv_m4c9ow1b uv_m4c9ow3c"
                  >
                    step1
                  </h3>
                </div>
              </li>
              <li
                class="emotion-11 emotion-12 uv_1g1au381 uv_1g1au383"
              >
                <div
                  class="emotion-19 emotion-14"
                >
                  2
                </div>
                <div
                  class="uv_1g1au384 uv_1g1au386"
                >
                  <h3
                    class="emotion-15 emotion-16 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow3c"
                  >
                    step2
                  </h3>
                </div>
              </li>
            </ul>
          </div>
          <div
            class="emotion-23 emotion-24"
          >
            <div
              class="emotion-25 emotion-26"
            >
              <h3
                class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owi uv_m4c9ow16 uv_m4c9ow1b uv_m4c9ow3c"
              >
                First step
              </h3>
            </div>
            Description
            <div
              class="emotion-27 emotion-28"
            >
              <img
                alt="blockStorage"
                src="https://assets.scaleway.com/illustrations/products/blockStorage/block-storage-wire.svg"
                width="200"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`steppedListCard > should work with pre-completed step 1`] = `
<DocumentFragment>
  .emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 1.5rem;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 1.5rem;
}

.emotion-2 {
  display: grid;
  grid-template-columns: 9fr 1fr;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.emotion-2 {
  display: grid;
  grid-template-columns: 9fr 1fr;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.emotion-5 {
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
  padding: 1.5rem;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  padding: 0;
}

.emotion-5[data-is-active='true'] {
  border: 1px solid #8c40ef;
}

.emotion-5[data-disabled='true'] {
  border: 1px solid #e9eaeb;
}

.emotion-5 {
  border: 1px solid #d9dadd;
  border-radius: 0.25rem;
  padding: 1.5rem;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  padding: 0;
}

.emotion-5[data-is-active='true'] {
  border: 1px solid #8c40ef;
}

.emotion-5[data-disabled='true'] {
  border: 1px solid #e9eaeb;
}

.emotion-7 {
  display: grid;
  grid-template-columns: 1fr 3fr;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.emotion-7 {
  display: grid;
  grid-template-columns: 1fr 3fr;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 2rem;
  padding: 1.5rem;
  border-right: solid #d9dadd 1px;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 2rem;
  padding: 1.5rem;
  border-right: solid #d9dadd 1px;
}

.emotion-11 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-11 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 2rem;
  height: 2rem;
  font-size: 1rem;
  color: #ffffff;
  background: #8c40ef;
  border: 1px solid #8c40ef;
}

.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 2rem;
  height: 2rem;
  font-size: 1rem;
  color: #ffffff;
  background: #8c40ef;
  border: 1px solid #8c40ef;
}

.emotion-15 {
  cursor: pointer;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
}

.emotion-15:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.emotion-15:active {
  text-decoration-thickness: 2px;
}

.emotion-15 {
  cursor: pointer;
  -webkit-transition: text-decoration-color 250ms ease-out;
  transition: text-decoration-color 250ms ease-out;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
  text-decoration-color: transparent;
}

.emotion-15:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-thickness: 1px;
}

.emotion-15:active {
  text-decoration-thickness: 2px;
}

.emotion-19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 2rem;
  height: 2rem;
  font-size: 1rem;
  color: #641cb3;
  background: #f1eefc;
  border: 1px solid #f1eefc;
}

.emotion-19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 2rem;
  height: 2rem;
  font-size: 1rem;
  color: #641cb3;
  background: #f1eefc;
  border: 1px solid #f1eefc;
}

.emotion-23 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-width: 0;
  padding: 1.5rem;
  padding-top: 2rem;
}

.emotion-23 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-width: 0;
  padding: 1.5rem;
  padding-top: 2rem;
}

.emotion-25 {
  margin-bottom: 1.5rem;
}

.emotion-25 {
  margin-bottom: 1.5rem;
}

.emotion-27 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: right;
  -ms-flex-pack: right;
  -webkit-justify-content: right;
  justify-content: right;
}

.emotion-27 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: right;
  -ms-flex-pack: right;
  -webkit-justify-content: right;
  justify-content: right;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1"
    >
      <div
        class="emotion-2 emotion-3"
      >
        <h1>
          Header
        </h1>
        <button
          class="uv_e1wcoe0 uv_e1wcoe3 uv_e1wcoe6 uv_e1wcoek uv_e1wcoei uv_e1wcoed uv_e1wcoe19"
          type="button"
        >
          Hide
        </button>
      </div>
      <div
        class="emotion-4 emotion-5 emotion-6"
        data-disabled="false"
        data-is-active="false"
      >
        <div
          class="emotion-7 emotion-3"
        >
          <div
            class="emotion-9 emotion-10"
          >
            <ul
              class="uv_1g1au380"
            >
              <li
                class="emotion-11 emotion-12 uv_1g1au381 uv_1g1au383"
              >
                <div
                  class="emotion-13 emotion-14"
                >
                  1
                </div>
                <div
                  class="uv_1g1au384 uv_1g1au386"
                >
                  <h3
                    class="emotion-15 emotion-16 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owi uv_m4c9owq uv_m4c9ow1b uv_m4c9ow3c"
                  >
                    step1
                  </h3>
                </div>
              </li>
              <li
                class="emotion-11 emotion-12 uv_1g1au381 uv_1g1au383"
              >
                <div
                  class="emotion-19 emotion-14"
                >
                  <svg
                    class="styles__1sbwqkz0 styles_prominence_default__1sbwqkzg styles_disabled_false__1sbwqkzf styles_size_small__1sbwqkza"
                    viewBox="0 0 16 16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M12.166 3.126a.75.75 0 0 1 .208 1.04l-5 7.5a.75.75 0 0 1-1.154.114l-3-3a.75.75 0 0 1 1.06-1.06l2.353 2.353 4.493-6.739a.75.75 0 0 1 1.04-.208"
                    />
                  </svg>
                </div>
                <div
                  class="uv_1g1au384 uv_1g1au386"
                >
                  <h3
                    class="emotion-15 emotion-16 uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow3c"
                  >
                    step2
                  </h3>
                </div>
              </li>
            </ul>
          </div>
          <div
            class="emotion-23 emotion-24"
          >
            <div
              class="emotion-25 emotion-26"
            >
              <h3
                class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owi uv_m4c9ow16 uv_m4c9ow1b uv_m4c9ow3c"
              >
                First step
              </h3>
            </div>
            Description
            <div
              class="emotion-27 emotion-28"
            >
              <img
                alt="blockStorage"
                src="https://assets.scaleway.com/illustrations/products/blockStorage/block-storage-wire.svg"
                width="200"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
